--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script>
+  <!--  <script>
         window.location.href = "home.html";
-    </script>
+    </script>--!>
+    <title>HOLA MUNDO</title>
 </head>
 </html>
