prueba hola mundo

--- a/index.html
+++ b/index.html
@@ -7,4 +7,8 @@
         window.location.href = "acerca-de.html";
     </script>
 </head>
+
+<body>
+    <title>Hola MUNDO    </title>
+</body>
 </html>
