--- a/portafolio.html
+++ b/portafolio.html
@@ -18,8 +18,21 @@
                 <img src="assets/images/Foto_Marlon_Jared_Ospina_Ochoa.webp" alt="logo" class="brand-img">
                 <h1 class="brand-name">Marlon Ospina</h1>
             </div>
-
-            <ion-icon name="menu-outline" class="menu-toggler"></ion-icon>
+        
+            <!-- Sección que contiene los íconos -->
+            <section class="icono_menu_amburguesa icono_escala">
+                <!-- Ícono de hamburguesa -->
+                <svg id="iconoHamburguesa" viewBox="0 0 384 384" width="20" height="20" class="menu-toggler icono_menu_amburguesa_color2">
+                    <g><rect x="0" y="277.333" width="384" height="42.667"></rect>
+                        <rect x="0" y="170.667" width="384" height="42.667"></rect>
+                        <rect x="0" y="64" width="384" height="42.667"></rect></g>
+                </svg>
+        
+                <!-- Ícono de cerrar (inicialmente oculto) -->
+                <svg id="iconoCerrar" viewBox="0 0 22.88 22.88" width="20" height="20" class="menu-toggler icono_menu_amburguesa_color2" >
+                    <path d="M0.324,1.909c-0.429-0.429-0.429-1.143,0-1.587c0.444-0.429,1.143-0.429,1.587,0l9.523,9.539l9.539-9.539c0.429-0.429,1.143-0.429,1.571,0c0.444,0.444,0.444,1.159,0,1.587l-9.523,9.524l9.523,9.539c0.444,0.429,0.444,1.143,0,1.587c-0.429,0.429-1.143,0.429-1.571,0l-9.539-9.539l-9.523,9.539c-0.444,0.429-1.143,0.429-1.587,0c-0.429-0.444-0.429-1.159,0-1.587l9.523-9.539L0.324,1.909z"></path>
+                </svg>
+            </section>
         </nav>
 <!-- circulos animados de foto perfil-->
 <div class="side-bar">
