actualización, resumen, portafolio
se agrego nuevo tooltip para mostrar los titulos y certificaciones,, actualización de portafolio, falta actualizar el archivo de CV,

--- a/portafolio.html
+++ b/portafolio.html
@@ -136,11 +136,13 @@
         <img src="assets/images/imagenes_portafolio/FOTOGRAFIA09.webp"  alt="fotografia 9" data-category="fotografia" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/FOTOGRAFIA010.webp" alt="fotografia 10" data-category="fotografia" class="img_gallery">
 
+        <img src="assets/images/imagenes_portafolio/3D_casa_animum_Marlon_img_08.webp"      alt="3D 0" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_BirdMonster_base_img_06.jpg"         alt="3D 1" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/3D_Martillo_img_09.webp"                alt="3D 2" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_BirdMonster_custom_ocean_img_05.jpg" alt="3D 2" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_HELLBOT_img_01.jpg"                  alt="3D 3" data-category="3d" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/3D_Mano_cortada_img_02.jpg"             alt="3D 4" data-category="3d" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/3D_Robot_metal_img_02.jpg"              alt="3D 5" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/3D_Mano_cortada_img_04.jpg"             alt="3D 4" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/3D_Robot_metal_img_07.jpg"              alt="3D 5" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Super_Icecream_img_03.jpg"           alt="3D 5" data-category="3d" class="img_gallery">
        
         <img src="assets/images/imagenes_portafolio/logo_bandera_amarillo.webp"         alt="logo 1" data-category="logos" class="img_gallery">
