codigo de incorporación a google research
se agrego esto

<meta name="google-site-verification" content="ILK8sqo2SOjNB1F9d6du3caPqQQXKWxBqnzXab_EvyM" />

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     </script>
 </head>
 
+<!-- SECCION DE INDEX PARA GOOGLE RESEARCH -- aca se agrega linea de codigo para posicionar, No cambiar para no perder posicionamiento de dominio-->
+<meta name="google-site-verification" content="ILK8sqo2SOjNB1F9d6du3caPqQQXKWxBqnzXab_EvyM" />
 <body>
     <title>Hola MUNDO</title>
 </body>
