--- a/contacto.html
+++ b/contacto.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+        <!-- SECCION DE INDEX PARA GOOGLE RESEARCH -- aca se agrega linea de codigo para posicionar, No cambiar para no perder posicionamiento de dominio-->
+    <meta name="google-site-verification" content="ILK8sqo2SOjNB1F9d6du3caPqQQXKWxBqnzXab_EvyM" />
+        <!-- SECCION DE INDEX PARA GOOGLE RESEARCH -- aca se agrega linea de codigo para posicionar, No cambiar para no perder posicionamiento de dominio-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
