subida_mejora de CV y ajuste de imagenes
se subio el nuevo CV es y en tambien arreglo de info y certificados, tambien subida de imagenes de portafolio, faltan animaciones 3d y logos motion graphisct

--- a/portafolio.html
+++ b/portafolio.html
@@ -162,7 +162,7 @@
         <img src="assets/images/imagenes_portafolio/FOTOGRAFIA06.webp"  alt="fotografia 6" data-category="fotografia" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/FOTOGRAFIA07.webp"  alt="fotografia 7" data-category="fotografia" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/FOTOGRAFIA08.webp"  alt="fotografia 8" data-category="fotografia" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/FOTOGRAFIA09.webp"  alt="fotografia 9" data-category="fotografia" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/FOTOGRAFIA09.webp" alt="fotografia 9" data-category="fotografia marketing" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/FOTOGRAFIA010.webp" alt="fotografia 10" data-category="fotografia" class="img_gallery">
 
         <img src="assets/images/imagenes_portafolio/3D_casa_animum_Marlon_img_08.webp"      alt="3D 0" data-category="3d" class="img_gallery">
@@ -180,8 +180,13 @@
         <img src="assets/images/imagenes_portafolio/logo_bandera_negro.webp"            alt="logo 4" data-category="logos" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/logo_bandera_roja.webp"             alt="logo 5" data-category="logos" class="img_gallery">
 
+<!--imagenes de marketing-->
 
-
+        <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads01.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads02.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads03.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads04.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads05.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
 
 
 
@@ -213,11 +218,29 @@
 
         <video controls data-category="marketing" class="video_gallery" alt="Marketing 1">
             <source src="assets/videos/Marketing_Historia Instagram.mp4" type="video/mp4">
-            Tu navegador no soporta el elemento de video.
         </video>
+        
         <video controls data-category="marketing" class="video_gallery" alt="Marketing 2">
             <source src="assets/videos/Marketing_Punto_gofre_1_M.webm" type="video/mp4">
-            Tu navegador no soporta el elemento de video.
+            
+        </video>
+<video controls data-category="marketing animaciones" class="video_gallery" alt="Marketing 3">
+            <source src="assets/videos/Marketing_tips_after_effects01.webm" type="video/mp4">
+        </video>
+
+        </video>
+<video controls data-category="marketing animaciones" class="video_gallery" alt="Marketing 4">
+            <source src="assets/videos/Marketing_tips_after_effects02.webm" type="video/mp4">
+        </video>
+
+        </video>
+<video controls data-category="marketing animaciones" class="video_gallery" alt="Marketing 5">
+            <source src="assets/videos/Marketing_tips_after_effects03.webm" type="video/mp4">
+        </video>
+
+        </video>
+<video controls data-category="marketing animaciones" class="video_gallery" alt="Marketing 6">
+            <source src="assets/videos/Marketing_tips_after_effects04.webm" type="video/mp4">
         </video>
 
     </div>
