subida de portafolio  y arreglo de codigo

--- a/portafolio.html
+++ b/portafolio.html
@@ -173,7 +173,9 @@
         <img src="assets/images/imagenes_portafolio/3D_Mano_cortada_img_04.jpg"             alt="3D 4" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Robot_metal_img_07.jpg"              alt="3D 5" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Super_Icecream_img_03.jpg"           alt="3D 5" data-category="3d" class="img_gallery">
-       
+        <img src="assets/images/imagenes_portafolio/Treasure_Chest_3D_Model.webp"           alt="3D 5" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Magic_Potion.webp"                      alt="3D 5" data-category="3d" class="img_gallery">
+
         <img src="assets/images/imagenes_portafolio/logo_bandera_amarillo.webp"         alt="logo 1" data-category="logos" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/logo_bandera_azul.webp"             alt="logo 2" data-category="logos" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/logo_bandera_blanco.webp"           alt="logo 3" data-category="logos" class="img_gallery">
@@ -212,6 +214,11 @@
         </video>
         <video controls data-category="animaciones" class="video_gallery" alt="Animación 3">
             <source src="assets/videos/Animacion_vr_larga_CT_logo_intro.mp4" type="video/mp4">
+            Tu navegador no soporta el elemento de video.
+        </video>
+
+        <video controls data-category="animaciones" class="video_gallery" alt="Animación 3d">
+            <source src="assets/videos/Animacion_confre _del_tesoro.mp4" type="video/mp4">
             Tu navegador no soporta el elemento de video.
         </video>
 <!--MARKETING-->
