actualización tool tips documentos resumen
ya se pueden visualizar en el buscador

--- a/resumen.html
+++ b/resumen.html
@@ -152,9 +152,10 @@
     </h4>
     <p class="company">Animum Creativity Advanced School<br>España
         <br><br>
-        <span class="tooltip texto_info tooltip-text">
-            Info
+        <span class="tooltip texto_info tooltip-text"> 
+            Info 
            <br>
+           <a href="assets/images/titulos_img/titulo_Animum_Certificado.webp" target="_blank"> 
            <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
             <g>
             <g>
@@ -171,6 +172,7 @@
         </g>
         </g>
         </svg>
+        </a>
           <span class="tooltip-img ">
             <img src="assets/images/titulos_img/titulo_Animum_Certificado.webp" alt="Tooltip Image">
             - Certificado: Finalización - Fundamentos de la Producción 3D
@@ -183,7 +185,8 @@
 
         <span class="tooltip texto_info tooltip-text">
             certif
-           <br>
+           <br>           
+           <a href="assets/images/titulos_img/Certificado_Autodesk_Curso-Fundamentos-de-la-Producción-3D.webp" target="_blank"> 
            <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
             <g>
             <g>
@@ -199,7 +202,7 @@
            </path>
         </g>
         </g>
-        </svg>
+        </svg></a>
           <span class="tooltip-img ">
             <img src="assets/images/titulos_img/Certificado_Autodesk_Curso-Fundamentos-de-la-Producción-3D.webp" alt="Tooltip Image">
             - Certificado: Finalización - Fundamentos de la Producción 3D
@@ -222,6 +225,8 @@
         <span class="tooltip texto_info tooltip-text">
             Info
            <br>
+           <a href="assets/images/titulos_img/titulo_diseño_digital.webp" target="_blank"> 
+
            <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
             <g>
             <g>
@@ -238,6 +243,7 @@
         </g>
         </g>
         </svg>
+           </a>
           <span class="tooltip-img ">
             <img src="assets/images/titulos_img/titulo_diseño_digital.webp" alt="Tooltip Image">
             - Pregrado de: Diseño Digital
@@ -261,6 +267,8 @@
     <span class="tooltip texto_info tooltip-text">
         Info
        <br>
+                  <a href="assets/images/titulos_img/titulo_Master_UPV.webp" target="_blank"> 
+
        <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
         <g>
         <g>
@@ -277,6 +285,7 @@
     </g>
     </g>
     </svg>
+                  </a>
       <span class="tooltip-img ">
         <img src="assets/images/titulos_img/titulo_Master_UPV.webp" alt="Tooltip Image">
        - Master de: Comunicación Digital y Experiencia de Usuario (UX/UI)
@@ -310,6 +319,8 @@
         <span class="tooltip texto_info tooltip-text">
             Info
            <br>
+                             <a href="assets/images/titulos_img/titulo_Bachiller_grado.webp" target="_blank"> 
+
            <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
             <g>
             <g>
@@ -326,6 +337,7 @@
         </g>
         </g>
         </svg>
+                             </a>
           <span class="tooltip-img ">
             <img src="assets/images/titulos_img/titulo_Bachiller_grado.webp" alt="Tooltip Image">
            - Título: Bachiller Académico
@@ -350,6 +362,8 @@
     <span class="tooltip texto_info tooltip-text">
         Info
        <br>
+                                    <a href="assets/images/titulos_img/titulo_Unity_Developer.webp" target="_blank"> 
+
        <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
         <g>
         <g>
@@ -366,6 +380,7 @@
     </g>
     </g>
     </svg>
+                                    </a>
       <span class="tooltip-img ">
         <img src="assets/images/titulos_img/titulo_Unity_Developer.webp" alt="Tooltip Image">
        - Distintivo: Unity Certified Developer
@@ -391,6 +406,8 @@
     <span class="tooltip texto_info tooltip-text">
         Info
        <br>
+                                           <a href="assets/images/titulos_img/titulo_Autodesk_Mudbox.jpg" target="_blank"> 
+
        <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
         <g>
         <g>
@@ -407,6 +424,7 @@
     </g>
     </g>
     </svg>
+                                           </a>
       <span class="tooltip-img ">
         <img src="assets/images/titulos_img/titulo_Autodesk_Mudbox.jpg" alt="Tooltip Image">
        - Certificado: Diseño de Juegos de Mesa y Personajes 3D (Autodesk Mudbox)
@@ -429,6 +447,8 @@
     <span class="tooltip texto_info tooltip-text">
         Info
        <br>
+         <a href="assets/images/titulos_img/titulo_Autodesk_3Ds_Max.jpg" target="_blank"> 
+
        <svg height="40px" width="40px" viewBox="0 0 304.069 304.069">
         <g>
         <g>
@@ -445,6 +465,7 @@
     </g>
     </g>
     </svg>
+         </a>
       <span class="tooltip-img ">
         <img src="assets/images/titulos_img/titulo_Autodesk_3Ds_Max.jpg" alt="Tooltip Image">
        - Certificado: Diseño de Juegos de Mesa y Personajes 3D (Autodesk 3Ds Max)
