codig - ajuste instagram profesional
cambio de instagram de personal al profesional

--- a/contacto.html
+++ b/contacto.html
@@ -182,7 +182,7 @@
  <div class="embed-wrapper grid-right">
     <blockquote 
       class="instagram-media" 
-      data-instgrm-permalink="https://www.instagram.com/marlon.jared1103/" 
+      data-instgrm-permalink="https://www.instagram.com/marlon_gamedev/" 
       data-instgrm-version="14"
       style="margin: 0 auto;">
       <div class="insta-container">
