subida de imagen de espada
se sube la imagen me faltaba

--- a/portafolio.html
+++ b/portafolio.html
@@ -173,7 +173,8 @@
         <img src="assets/images/imagenes_portafolio/3D_BirdMonster_base_img_06.jpg"         alt="3D 9" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/MkI_Scope-object.webp"                  alt="3D 10" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/RED-POWER_RANGER.webp"                  alt="3D 11" data-category="3d" class="img_gallery"                  alt="3D 10" data-category="3d" class="img_gallery">
-        
+        <img src="assets/images/imagenes_portafolio/Espada_Huntrix_fanart.webp"             alt="3D 11" data-category="3d" class="img_gallery"                  alt="3D 10" data-category="3d" class="img_gallery">
+
         
         <video controls data-category="animaciones 3d" class="video_gallery" alt="Animación 3d">
             <source src="assets/videos/portafolio-de-animación01.webm" type="video/mp4">
