actulizacion portafolio + videojuegos
se agregaron archivos de marketing, pokemon, concept, life  in the sotne y videojuegos, el primero HOPE falta los juegos

--- a/portafolio.html
+++ b/portafolio.html
@@ -203,14 +203,15 @@
             Tu navegador no soporta el elemento de video.
         </video>
 
-        <img src="assets/images/imagenes_portafolio/Concept_02.webp" alt="Concept 2" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_03.webp" alt="Concept 3" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_04.webp" alt="Concept 4" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_05.webp" alt="Concept 5" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_06.webp" alt="Concept 6" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_08.webp" alt="Concept 7" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_07.webp" alt="Concept 7" data-category="concepts" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/Concept_01.webp" alt="Concept 1" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_02.webp"                    alt="Concept 2" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Life_In_The_Stone_Concept_Art.webp" alt="Concept 2" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_03.webp"                    alt="Concept 3" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_04.webp"                    alt="Concept 4" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_05.webp"                    alt="Concept 5" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_06.webp"                    alt="Concept 6" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_08.webp"                    alt="Concept 7" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_07.webp"                    alt="Concept 7" data-category="concepts" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Concept_01.webp"                    alt="Concept 1" data-category="concepts" class="img_gallery">
 
 
         
@@ -235,6 +236,7 @@
 <!--imagenes de marketing-->
 
         <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads01.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/Marketing_Fortnite_y_Pokemon.webp"           alt="Marketing 7" data-category="marketing" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads02.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads03.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/Marketing_Lone_Rider_ads04.webp"             alt="Marketing 7" data-category="marketing" class="img_gallery">
