--- a/resumen.html
+++ b/resumen.html
@@ -10,7 +10,8 @@
     <script defer src="script_barras.js"></script>
     <script defer src="script.js"></script>
     <title>Resumen - Marlon Ospina</title>
-    <link rel="icon" href="assets/favicon/favicon_logo.ico" type="image/x-icon">
+<link rel="icon" href="assets/favicon/favicon.png" type="image/png">
+<link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/png">
    
     
 </head>
