--- a/acerca-de.html
+++ b/acerca-de.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
     <title>Acerca de - Marlon Ospina</title>
-    <link rel="icon" href="assets/favicon/favicon_logo.ico" type="image/x-icon">
+<link rel="icon" href="assets/favicon/favicon.png" type="image/png">
+<link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/png">
 
     
 </head>
@@ -153,7 +154,7 @@
                 <p class="title">Game Developer</p>
                 <h1 class="name">Marlon Ospina</h1>
                 <div class="description">
-                    <p>Soy Marlon Jared Ospina Ochoa, diseñador digital y desarrollador de videojuegos de Bogotá. Me formé en Diseño Digital en la Universidad Sergio Arboleda y tengo un Máster en Comunicación Digital UX/UI por la Universidad Politécnica de Valencia.</p>
+                    <p>Soy Marlon Jared Ospina Ochoa, diseñador digital y desarrollador de videojuegos de Bogotá. Me formé en Diseño Digital en la Universidad Sergio Arboleda y tengo un Máster en Marketing y Comunicación Digital UX/UI por la Universidad Politécnica de Valencia.</p>
                     <p>Manejo herramientas como Unity, Unreal, C#, y Adobe Creative Suite. Mi objetivo es crear experiencias interactivas que combinen estética y funcionalidad.</p>
                     <p>¡Conectemos! Descarga mi CV y hablemos.</p>
                 </div>
