--- a/portafolio.html
+++ b/portafolio.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
-    <link rel="icon" href="assets/favicon/favicon_logo.ico" type="image/x-icon">
+<link rel="icon" href="assets/favicon/favicon.png" type="image/png">
+<link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/png">
     <title>Portafolio - Marlon Ospina</title>
 </head>
 <body>
