update image in index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script>
         window.location.href = "acerca-de.html";
     </script>
+    <link rel="icon" href="assets/favicon/favicon.png" type="image/png">
+<link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/png">
 </head>
 
 
