cambio de texto de titulo master

--- a/resumen.html
+++ b/resumen.html
@@ -261,7 +261,7 @@
 
 <div class="grid-item">
 <h4 class="year">2024</h4>
-<h4 class="education-name">Máster en Comunicación Digital y Experiencia de Usuario (UX/UI)</h4>
+<h4 class="education-name">Máster en Marketin Comunicación Digital y Experiencia de Usuario (UX/UI)</h4>
 <p class="company">
     Universidad Politécnica de Valencia (UPV)<br>
     España<br><br>
