--- a/portafolio.html
+++ b/portafolio.html
@@ -152,6 +152,12 @@
     <div class="gallery_portafolio">
 
          <!-- Slider de comparación -->
+          <div class="before-after img_gallery lusido" data-category="3d">
+            <img class="img back-img " src="assets/images/imagenes_portafolio/sala_3D_render.webp" alt="before" />
+            <img class="img front-img " src="assets/images/imagenes_portafolio/sala_3D_render_maya.webp" alt="after" />
+            <input type="range" min="1" max="100" value="50" class="slider" name="slider" id="slider" />
+            <div class="slider-line" id="slider-line"></div> <!-- Línea vertical -->
+        </div>
          <div class="before-after img_gallery lusido" data-category="3d">
             <img class="img back-img " src="assets/images/imagenes_portafolio/Icecream_base_img_02.webp" alt="before" />
             <img class="img front-img " src="assets/images/imagenes_portafolio/Icecream_base_img_MAYAPOLIGONAL_02.webp" alt="after" />
@@ -164,6 +170,7 @@
         <!-- Imágenes -->
         <img src="assets/images/imagenes_portafolio/3D_casa_animum_Marlon_img_08.webp"      alt="3D 0" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Martillo_img_09.webp"                alt="3D 1" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/sala_3D_render.webp"                    alt="3D 2" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_BirdMonster_custom_ocean_img_05.jpg" alt="3D 2" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_HELLBOT_img_01.jpg"                  alt="3D 3" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Mano_cortada_img_04.jpg"             alt="3D 4" data-category="3d" class="img_gallery">
