--- a/portafolio.html
+++ b/portafolio.html
@@ -172,13 +172,13 @@
         <img src="assets/images/imagenes_portafolio/3D_Martillo_img_09.webp"                alt="3D 1" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/sala_3D_render.webp"                    alt="3D 2" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_BirdMonster_custom_ocean_img_05.jpg" alt="3D 2" data-category="3d" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/3D_HELLBOT_img_01.jpg"                  alt="3D 3" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/3D_HELLBOT_img_01_11.webp"                  alt="3D 3" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Mano_cortada_img_04.jpg"             alt="3D 4" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Robot_metal_img_07.jpg"              alt="3D 5" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/3D_Super_Icecream_img_03.jpg"           alt="3D 6" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/Treasure_Chest_3D_Model.webp"           alt="3D 7" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/Magic_Potion.webp"                      alt="3D 8" data-category="3d" class="img_gallery">
-        <img src="assets/images/imagenes_portafolio/3D_BirdMonster_base_img_06.jpg"         alt="3D 9" data-category="3d" class="img_gallery">
+        <img src="assets/images/imagenes_portafolio/3D_BirdMonster_base_img_06.webp"         alt="3D 9" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/MkI_Scope-object.webp"                  alt="3D 10" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/RED-POWER_RANGER.webp"                  alt="3D 11" data-category="3d" class="img_gallery"                  alt="3D 10" data-category="3d" class="img_gallery">
         <img src="assets/images/imagenes_portafolio/Espada_Huntrix_fanart.webp"             alt="3D 11" data-category="3d" class="img_gallery"                  alt="3D 10" data-category="3d" class="img_gallery">
