actualizacion de img y cosas de hipervinculos

--- a/portafolio.html
+++ b/portafolio.html
@@ -11,6 +11,23 @@
 <link rel="icon" href="assets/favicon/favicon.png" type="image/png">
 <link rel="shortcut icon" href="assets/favicon/favicon.png" type="image/png">
     <title>Portafolio - Marlon Ospina</title>
+    <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Marlon Jared Ospina Ochoa",
+  "url": "https://marlonjared.github.io/web/",
+  "image": "https://marlonjared.github.io/web/assets/favicon/favicon.png",
+  "sameAs": [
+    "https://www.linkedin.com/in/marlon-jared-ospina-ochoa/",
+    "https://www.artstation.com/marlonjaredospinaochoa",
+    "https://www.fab.com/es-mx/sellers/Marlon%20Jared%20Ospina%20Ochoa",
+    "https://www.instagram.com/marlon.jared1103/",
+    "https://x.com/Marlon_GameDev",
+    "https://sketchfab.com/MarlonJaredOspinaOchoa"
+  ]
+}
+</script>
 </head>
 <body>
     <div class="container">
